# rolling-average

./: README.md  rolling-average.cabal  stack.yaml
bench/: Main.hs
src/Statistics/: RollingAverage.hs
test/: Main.hs
