name:                rolling-average
version:             0.0.0.0
synopsis:            Simple rolling average utility
description:         Please see README.md
homepage:            https://github.com/soostone/rolling-average#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Xavier
maintainer:          Michael Xavier <michael.xavier@soostone.com>
copyright:           2016 Soostone Inc.
category:            Statistics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  changelog.md
  bench/*.hs


library
  hs-source-dirs:      src
  exposed-modules:     Statistics.RollingAverage
  build-depends:       base >= 4.6 && < 5
                     , containers
  default-language:    Haskell2010

test-suite rolling-average-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , rolling-average
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  default-language:    Haskell2010
  build-depends:
      base
    , rolling-average
    , criterion

source-repository head
  type:     git
  location: https://github.com/soostone/rolling-average
