name:                rolling-average
version:             0.0.0.0
synopsis:            Simple rolling average utility
description:         Please see README.md
homepage:            https://github.com/soostone/rolling-average#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Xavier
maintainer:          Michael Xavier <michael.xavier@soostone.com>
copyright:           2016 Soostone Inc.
category:            Statistics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  changelog.md
  bench/*.hs

flag lib-Werror
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Statistics.RollingAverage
  build-depends:       base >= 4.6 && < 5
                     , containers
  default-language:    Haskell2010
  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


test-suite rolling-average-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , containers
                     , rolling-average
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  default-language:    Haskell2010
  build-depends:
      base
    , rolling-average
    , criterion
  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


source-repository head
  type:     git
  location: https://github.com/soostone/rolling-average
